# edgecheck

./: README.md  edgecheck.py  pyproject.toml  test_edgecheck.py
examples/: bad_edges.py  good_edges.py
