[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "edgecheck"
version = "1.0.0"
description = "Python Edge Case Detector — find missing error handling that AI coding agents commonly miss"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kris Kimmerle" },
]
keywords = [
    "edge-case", "error-handling", "static-analysis", "linter",
    "ai-code-review", "python", "code-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/edgecheck"
Repository = "https://github.com/kriskimmerle/edgecheck"

[project.scripts]
edgecheck = "edgecheck:main"
